--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"tsc -w\" \"nodemon server.js\"",
+    "dev": "concurrently \"tsc -w\" \"nodemon server.js\"",
+    "start": "nodemon server.js",
     "start-server": "node server.js",
     "tsc": "tsc -w"
   },
