--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"tsc -w\" \"nodemon server.js\"",
-    "start": "nodemon server.js",
+    "dev": "concurrently \"tsc -w\" \"nodemon index.js\"",
+    "start": "nodemon index.js",
     "reset":"nodemon reset.js",
     "start-server": "node server.js",
     "seed": "node seeder.js",
