--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@prisma/client": "^5.9.1",
     "@types/cors": "^2.8.17",
+    "@types/node-schedule": "^2.1.7",
     "@types/pdfmake": "^0.2.9",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
@@ -27,6 +28,7 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
+    "node-schedule": "^2.1.1",
     "pdfmake": "^0.2.15"
   },
   "devDependencies": {
