--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "dependencies": {
     "@prisma/client": "^5.9.1",
     "@types/cors": "^2.8.17",
+    "@types/multer": "^1.4.12",
     "@types/node-schedule": "^2.1.7",
     "@types/pdfmake": "^0.2.9",
+    "@types/uuid": "^10.0.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
@@ -28,6 +30,7 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "node-schedule": "^2.1.1",
     "pdfmake": "^0.2.15"
   },
