--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@types/uuid": "^10.0.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "canvas": "^3.1.0",
     "cookie-parser": "^1.4.6",
     "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.5",
     "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "face-api.js": "^0.22.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "node-schedule": "^2.1.1",
